# parallels

task2/task2_1/: CMakeLists.txt  make_table.py  plot.py  results.csv  task1.cpp
task2/task2_2/: CMakeLists.txt  plot.py  results.csv  task2.cpp
task2/task2_3/: CMakeLists.txt  lab2_var1.cpp  lab2_var2.cpp  schedule.cpp
task2/task2_3/results/: lab2_var1_threads.csv  lab2_var2_threads.csv  make_table.py  plot.py  schedule_results.csv
task3/: CMakeLists.txt
task3/task3_1/: task3_1.cpp
task3/task3_2/: task3_2.cpp
